@@ -3,6 +3,10 @@
 
   03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
   cgminer-3.1.0.ebuild, metadata.xml:
+  Add USE flag to enable support for Butterfly Labs ASICs.
+
+  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  cgminer-3.1.0.ebuild, metadata.xml:
   Add USE flag to enable support for Avalon ASICs.
 
   03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
